src/objects/Springboard_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Sustainer_Upgrade_Amount_Field__c</fullName>
        <description>The field on the Contact object that contains the sustainer upgrade amount value.</description>
        <inlineHelpText>The field on the Contact object that contains the sustainer upgrade amount value.</inlineHelpText>
        <label>Sustainer Upgrade Amount Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sustainer_Upgrade_Form_Id__c</fullName>
        <description>The Drupal node ID of the sustainer upgrade form that will be used to perform upgrades. This is an optional parameter because one form will be designated as the default in the Springboard website.</description>
        <inlineHelpText>The Drupal node ID of the sustainer upgrade form that will be used to perform upgrades. This is an optional parameter because one form will be designated as the default in the Springboard website.</inlineHelpText>
        <label>Sustainer Upgrade Form Id</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sustainer_Upgrade_Token_Lifespan__c</fullName>
        <description>The number of days a Sustainer Upgrade link should be considered valid.</description>
        <inlineHelpText>The number of days a Sustainer Upgrade link should be considered valid.</inlineHelpText>
        <label>Sustainer Upgrade Token Lifespan</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Springboard Settings</label>
</CustomObject>